--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,29 @@
-<p id="notice"><%= notice %></p>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">用户列表</h3>
+  </div>
+<div class="panel-body">
 
-<h1>Listing Users</h1>
 
-<table>
-  <thead>
+
+<table class="table table-hover table-striped">
     <tr>
-      <th>Name</th>
-      <th>Sex</th>
+      <th>姓名</th>
+      <th>性别</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
 
-  <tbody>
     <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
         <td><%= user.sex %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '显示', user, class: 'btn btn-primary'%></td>
+        <td><%= link_to '编辑', edit_user_path(user) ,class: 'btn btn-primary'%></td>
+        <td><%= link_to '删除', user, method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn-danger' %></td>
       </tr>
     <% end %>
-  </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to '新建用户', new_user_path, class: 'btn btn-primary' %>
