--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <nav class="navbar navbar-inverse">
+<div class="container-fluid">
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">车辆销售管理系统</a>
+  </div>
+  <div>
+    <ul class="nav navbar-nav">
+      <li class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#">用户列表<span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Page 1-1</a></li>
+        <li><a href="#">Page 1-2</a></li>
+        <li><a href="#">Page 1-3</a></li>
+      </ul>
+      </li>
+
+      <li><a href="#">Page 2</a></li>
+      <li><a href="#">Page 3</a></li>
+    </ul>
+  </div>
+</div>
   <title>CarWeb</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  </nav>
 </head>
 <body>
 
