--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,10 @@
-<p id="notice"><%= notice %></p>
-
 <p>
-  <strong>Name:</strong>
+  <strong>姓名:</strong>
   <%= @user.name %>
 </p>
 
 <p>
-  <strong>Sex:</strong>
+  <strong>性别:</strong>
   <%= @user.sex %>
 </p>
 
